--- a/SmartContracts/package.json
+++ b/SmartContracts/package.json
@@ -6,24 +6,8 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "@truffle/contract": "^4.2.9",
-    "@trust/webcrypto": "^0.9.2",
-    "elliptic": "^6.5.3",
-    "ethers": "^5.0.19",
-    "express": "^4.17.1",
-    "ganache-cli": "^6.12.1",
-    "mocha": "^8.2.1",
-    "solc": "^0.8.0",
-    "truffle": "^5.1.30",
-    "web3": "^1.2.9"
-  },
+  "dependencies": {},
   "devDependencies": {},
-  "scripts": {
-    "test": "mocha --timeout 10000",
-    "truffle": "truffle migrate",
-    "truffle-internal": "set DEV_MODE=1&&  truffle migrate --network internal"
-  },
-  "author": "Mastahac Bogdan",
-  "license": "ISC"
+  "scripts": { },
+  "license": "MIT"
 }
